--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
         <div class="thumb-1"
           style="background-image: url(https://i.ibb.co/XVd2mNJ/0-C213537-9-EF8-4-E43-809-B-9-A8-CFE795352.png);"></div>
         <article>
-          <span>Pet Calendar App</span>
+          <span class="app-title">Pet Calendar App</span>
           <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
@@ -58,7 +58,7 @@
       <div class="card">
         <div class="thumb-3" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
         <article>
-          <span>Video Rental Store</span>
+          <span class="app-title">Video Rental Store</span>
           <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
@@ -79,7 +79,7 @@
       <div class="card">
         <div class="thumb-3" style="background-image: url(https://i.ibb.co/6ys4fN7/media-ranker-digest.png);"></div>
         <article>
-          <span>Media Ranker Digest</span>
+          <span class="app-title">Media Ranker Digest</span>
           <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
@@ -100,7 +100,7 @@
       <div class="card">
         <div class="thumb-5" style="background-image: url(https://i.ibb.co/sW20Kys/ride.png);"></div>
         <article>
-          <span>Ride Share Rails</span>
+          <span class="app-title">Ride Share Rails</span>
           <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
@@ -121,16 +121,16 @@
       <div class="card">
         <div class="thumb-solar" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
         <article>
-          <span>Solar System CLI</span>
+          <span class="app-title">Solar System CLI</span>
           <p class="app-text-1">Upon execution, the CLI program outputs the following:</p>
           <ol class="list-text">
-            <li><strong>list details:</strong> The CLI program, creates a separate list for planets.
+            <li><span class="highlight-2"><strong>list details:</strong></span> The CLI program, creates a separate list for planets.
             </li>
-            <li><strong>read alien details:</strong> If found, details about the alien are displayed.
+            <li><span class="highlight-2"><strong>read alien details:</strong></span> If found, details about the alien are displayed.
             </li>
-            <li><strong>add an alien:</strong> A user can add their own alien.
+            <li><span class="highlight-2"><strong>add an alien:</strong></span> A user can add their own alien.
             </li>
-            <li><strong>exit:</strong> Ends the program loop.
+            <li><span class="highlight-2"><strong>exit:</strong></span> Ends the program loop.
             </li>
           </ol>
           <p>
@@ -147,7 +147,7 @@
         <div class="thumb-book-review"
           style="background-image: url(https://i.ibb.co/9pgsnGQ/Screen-Shot-2022-01-03-at-8-04-08-PM.png);"></div>
         <article>
-          <span>Book Review Site</span>
+          <span class="app-title">Book Review Site</span>
           <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
@@ -170,7 +170,7 @@
         <div class="thumb-1"
           style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
-          <span>Slack Cli App</span>
+          <span class="app-title">Slack Cli App</span>
           <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
@@ -192,7 +192,7 @@
         <div class="thumb-2"
           style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
-          <span>Exquisite React App</span>
+          <span class="app-title">Exquisite React App</span>
           <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
@@ -214,7 +214,7 @@
         <div class="thumb-2"
           style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
         <article>
-          <span>Tic-Tac-Toe</span>
+          <span class="app-title">Tic-Tac-Toe</span>
           <p class="app-text">
             Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
             up to the lofty steeps of the Carpathians themselves. Right and left of us they
@@ -235,11 +235,11 @@
   <footer class="footer">
     <p class="p-footer">
       <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"
-          id="iconify-inline-linkedin"></span></a>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"
-          id="iconify-inline-gmail"></span></a>
+        id="iconify-inline-linkedin"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" 
+         data-icon="logos:google-gmail" id="iconify-inline-gmail"></span></a>
       <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"
-          id="iconify-inline-twitter"></span></a>
+        id="iconify-inline-twitter"></span></a>
     </p>
     © 2022 Sandy Vasquez - powered by Heroku
   </footer>
