updating Heroku demo links and updating card images

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
     </div>
     <div class="item-1">
       <div class="card">
-        <div class="thumb-5" style="background-image: url(https://bit.ly/3pNEkZL);"></div>
+        <div class="thumb-5" style="background-image: url(https://i.ibb.co/NC74wMy/movies.jpg);"></div>
         <article>
           <span class="app-title">Video Rental Store</span>
           <p class="app-text">
@@ -71,6 +71,27 @@
                 data-height="22" id="iconify-inline-github"></span></a>
             <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18"
                 data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-1">
+      <div class="card">
+        <div class="thumb-5" style="background-image: url(https://i.ibb.co/sW20Kys/ride.png);"></div>
+        <article>
+          <span class="app-title">Ride Share Rails</span>
+          <p class="app-text">
+            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
+            up to the lofty steeps of the Carpathians themselves. Right and left of us they
+            towered, with the afternoon sun falling full upon them and bringing out all the
+            glorious colours of this beautiful range, deep blue and purple in the shadows
+            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+          </p>
+          <p>
+            <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline"
+                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://ride-share-service.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+                data-width="18" data-height="18"></span></a>
           </p>
         </article>
       </div>
@@ -98,54 +119,7 @@
     </div>
     <div class="item-1">
       <div class="card">
-        <div class="thumb-5" style="background-image: url(https://i.ibb.co/sW20Kys/ride.png);"></div>
-        <article>
-          <span class="app-title">Ride Share Rails</span>
-          <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
-          </p>
-          <p>
-            <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline"
-                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
-            <a href="https://ride-share-service.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
-                data-width="18" data-height="18"></span></a>
-          </p>
-        </article>
-      </div>
-    </div>
-    <div class="item-2">
-      <div class="card">
-        <div class="thumb-solar" style="background-image: url(https://i.ibb.co/37Vcg8Y/space.jpg);"></div>
-        <article>
-          <span class="app-title">Solar System CLI</span>
-          <p class="app-text-1">Upon execution, the CLI program outputs the following:</p>
-          <ol class="list-text">
-            <li><span class="highlight-2"><strong>list details:</strong></span> The CLI program, creates a separate list for planets.
-            </li>
-            <li><span class="highlight-2"><strong>read alien details:</strong></span> If found, details about the alien are displayed.
-            </li>
-            <li><span class="highlight-2"><strong>add an alien:</strong></span> A user can add their own alien.
-            </li>
-            <li><span class="highlight-2"><strong>exit:</strong></span> Ends the program loop.
-            </li>
-          </ol>
-          <p>
-            <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="openmoji:github"
-                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
-            <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view"><span
-                class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
-          </p>
-        </article>
-      </div>
-    </div>
-    <div class="item-1">
-      <div class="card">
-        <div class="thumb-books"
-          style="background-image: url(https://i.ibb.co/FmvrjyN/test2.png);"></div>
+        <div class="thumb-books" style="background-image: url(https://i.ibb.co/FmvrjyN/test2.png);"></div>
         <article>
           <span class="app-title">Book Review Site</span>
           <p class="app-text">
@@ -162,13 +136,11 @@
                 data-width="18" data-height="18"></span></a>
           </p>
         </article>
-
       </div>
     </div>
     <div class="item-2">
       <div class="card">
-        <div class="thumb-1"
-          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <div class="slack" style="background-image: url(https://i.ibb.co/GptD16v/Untitled-design.png);"></div>
         <article>
           <span class="app-title">Slack Cli App</span>
           <p class="app-text">
@@ -179,9 +151,9 @@
             of the peaks, green and brown where grass and rock mingled, and an endless perspective
           </p>
           <p>
-            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22" id="iconify-inline-github"></span></a>
-            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+            <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="openmoji:github"
+                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
         </article>
@@ -189,8 +161,7 @@
     </div>
     <div class="item-2">
       <div class="card">
-        <div class="thumb-2"
-          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <div class="blocks" style="background-image: url(https://i.ibb.co/mRRP9vf/blocks.jpg);"></div>
         <article>
           <span class="app-title">Exquisite React App</span>
           <p class="app-text">
@@ -201,9 +172,9 @@
             of the peaks, green and brown where grass and rock mingled, and an endless perspective
           </p>
           <p>
-            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22" id="iconify-inline-github"></span></a>
-            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+            <a href="https://github.com/spv-hub/exquisite-react"><span class="iconify-inline"
+                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://exquisite-react-app.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
         </article>
@@ -211,8 +182,34 @@
     </div>
     <div class="item-2">
       <div class="card">
-        <div class="thumb-2"
-          style="background-image: url(https://i.ibb.co/mhhPvNF/Screen-Shot-2022-01-04-at-3-37-07-AM.png);"></div>
+        <div class="thumb-solar" style="background-image: url(https://i.ibb.co/FWSjYRJ/shutterstock-image.png);"></div>
+        <article>
+          <span class="app-title">Solar System CLI</span>
+          <p class="app-text-1">Upon execution, the CLI program outputs the following:</p>
+          <ol class="list-text">
+            <li><span class="highlight-2"><strong>list details:</strong></span> The CLI program, creates a separate list
+              for planets.
+            </li>
+            <li><span class="highlight-2"><strong>read alien details:</strong></span> If found, details about the alien
+              are displayed.
+            </li>
+            <li><span class="highlight-2"><strong>add an alien:</strong></span> A user can add their own alien.
+            </li>
+            <li><span class="highlight-2"><strong>exit:</strong></span> Ends the program loop.
+            </li>
+          </ol>
+          <p>
+            <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="openmoji:github"
+                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://drive.google.com/file/d/1JGCrWN9mm1Xe1c1uwl697k8Fz_f0aq0R/view"><span
+                class="iconify-inline" data-icon="noto:link" data-width="18" data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-2">
+      <div class="card">
+        <div class="slack" style="background-image: url(https://i.ibb.co/84P2pBg/XO.png);"></div>
         <article>
           <span class="app-title">Tic-Tac-Toe</span>
           <p class="app-text">
@@ -223,9 +220,9 @@
             of the peaks, green and brown where grass and rock mingled, and an endless perspective
           </p>
           <p>
-            <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22" id="iconify-inline-github"></span></a>
-            <a href="https://ruby-digest.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
+            <a href="https://github.com/jwinchan/react-tic-tac-toe"><span class="iconify-inline"
+                data-icon="openmoji:github" data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://tic-x-tac-o-toe.herokuapp.com/"><span class="iconify-inline" data-icon="noto:link"
                 data-width="18" data-height="18"></span></a>
           </p>
         </article>
@@ -235,11 +232,11 @@
   <footer class="footer">
     <p class="p-footer">
       <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"
-        id="iconify-inline-linkedin"></span></a>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" 
-         data-icon="logos:google-gmail" id="iconify-inline-gmail"></span></a>
+          id="iconify-inline-linkedin"></span></a>
+      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"
+          id="iconify-inline-gmail"></span></a>
       <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"
-        id="iconify-inline-twitter"></span></a>
+          id="iconify-inline-twitter"></span></a>
     </p>
     © 2022 Sandy Vasquez - powered by Heroku
   </footer>
