adding descriptions to projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,11 +38,12 @@
         <article>
           <span class="app-title">Pet Calendar App</span>
           <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            The Capstone Project is the final project at Ada. Students must pursue a concept and develop their project
+            to demonstrate an end solution. My partner and I decided to develop a pet note-taking app written in Swift.
+            The app tagline is <em>“pet-care made easy.”</em>
+            <br><br>
+            I developed the walkthrough onboarding page, Google auth login, app icon, home, and reminders functionality.
+            Later on, I improved upon the notes feature to match the reminders screen.
           </p>
           <p>
             <a href="https://github.com/spv-hub/myZooKeeper"><span class="iconify-inline" data-icon="openmoji:github"
@@ -54,38 +55,20 @@
         </article>
       </div>
     </div>
-    <div class="item-1">
-      <div class="card">
-        <div class="thumb-5" style="background-image: url(https://i.ibb.co/NC74wMy/movies.jpg);"></div>
-        <article>
-          <span class="app-title">Video Rental Store</span>
-          <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
-          </p>
-          <p>
-            <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
-                data-height="22" id="iconify-inline-github"></span></a>
-            <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18"
-                data-height="18"></span></a>
-          </p>
-        </article>
-      </div>
-    </div>
+
     <div class="item-1">
       <div class="card">
         <div class="thumb-5" style="background-image: url(https://i.ibb.co/sW20Kys/ride.png);"></div>
         <article>
           <span class="app-title">Ride Share Rails</span>
           <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            This project builds a Rails app that manages the Rideshare program with the following requirements:
+            <br><br>
+            <strong>Navigation functionality:</strong> As a user, I want a consistent, easily accessible navigation menu with different buttons/links from any page
+            <br><br>
+            <strong>Passenger functionality</strong> On the passenger list page, I want to click on a passenger to see that passenger's details
+            <br><br>
+            <strong>Driver functionality:</strong> On the driver list page, I want to click on a driver so that I can see that driver's details
           </p>
           <p>
             <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline"
@@ -102,11 +85,9 @@
         <article>
           <span class="app-title">Media Ranker Digest</span>
           <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            This is a Rails web app where users can vote for their favorite media works
+            Instead of implementing a pre-defined spec, this projects aim is to imitate: http://media-ranker-2-0.herokuapp.com
+            <br><br> The goal for this project is to match the functionality and styling of the above site as closely as possible
           </p>
           <p>
             <a href="https://github.com/spv-hub/media-ranker"><span class="iconify-inline" data-icon="openmoji:github"
@@ -119,15 +100,32 @@
     </div>
     <div class="item-1">
       <div class="card">
+        <div class="thumb-5" style="background-image: url(https://i.ibb.co/NC74wMy/movies.jpg);"></div>
+        <article>
+          <span class="app-title">Video Rental Store</span>
+          <p class="app-text">
+            This final full-stack project will be something that a rental store employee might use to manage the video store where they work. 
+            <br><br>
+            The React front-end implementation will interact with a Rails API on the back-end. The Rails API wraps an external API that contains many endpoints related to videos. The external API is The Movie DB.
+            <br><br>
+            The end product allows users to search for a video, select a video,  add a video to the video library,  and see a list of customers. The end product should be deployable to Heroku   
+          </p>
+          <p>
+            <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
+                data-height="22" id="iconify-inline-github"></span></a>
+            <a href="https://bit.ly/3EMxxG2"><span class="iconify-inline" data-icon="noto:link" data-width="18"
+                data-height="18"></span></a>
+          </p>
+        </article>
+      </div>
+    </div>
+    <div class="item-1">
+      <div class="card">
         <div class="thumb-books" style="background-image: url(https://i.ibb.co/FmvrjyN/test2.png);"></div>
         <article>
           <span class="app-title">Book Review Site</span>
           <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            The pages for this project will be the pieces of an online book review site. Semantic HTML tags that provide meaning and structure to the content. Additional functionality includes a PHP contact form and mobile-friendly design.
           </p>
           <p>
             <a href="https://bit.ly/3rVVdnJ"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
@@ -143,19 +141,22 @@
         <div class="slack" style="background-image: url(https://i.ibb.co/GptD16v/Untitled-design.png);"></div>
         <article>
           <span class="app-title">Slack Cli App</span>
-          <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
-          </p>
-          <p>
-            <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="openmoji:github"
-                data-width="22" data-height="22" id="iconify-inline-github"></span></a>
-            <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="noto:link"
-                data-width="18" data-height="18"></span></a>
-          </p>
+
+          <p class="app-text-1">Upon execution, the CLI program outputs the following:</p>
+          <ol class="list-text">
+            <li><span class="highlight-2"><strong>select user:</strong></span> The corresponding user
+            </li>
+            <li><span class="highlight-2"><strong>select channel:</strong></span> The corresponding channel
+            </li>
+            <li><span class="highlight-2"><strong>details:</strong></span> Print out details for the currently selected recipient
+            <li><span class="highlight-2"><strong>send message:</strong></span> If a recipient is selected, the program should ask me to type out a message, which will be sent to that recipient
+            </li>
+            <p>
+              <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="openmoji:github"
+                  data-width="22" data-height="22" id="iconify-inline-github"></span></a>
+              <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="noto:link"
+                  data-width="18" data-height="18"></span></a>
+            </p>
         </article>
       </div>
     </div>
@@ -165,11 +166,7 @@
         <article>
           <span class="app-title">Exquisite React App</span>
           <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            This project is a  single app that will allow users to contribute to a poem one line at a time using a form. Each line of poetry is a piece of data that propagates from component to component. A user filling out the form may only see the most recent line of poetry submitted. When the users are finished submitting lines of poetry, they should be able to see the entire poem
           </p>
           <p>
             <a href="https://github.com/spv-hub/exquisite-react"><span class="iconify-inline"
@@ -213,11 +210,7 @@
         <article>
           <span class="app-title">Tic-Tac-Toe</span>
           <p class="app-text">
-            Beyond the green swelling hills of the Mittel Land rose mighty slopes of forest
-            up to the lofty steeps of the Carpathians themselves. Right and left of us they
-            towered, with the afternoon sun falling full upon them and bringing out all the
-            glorious colours of this beautiful range, deep blue and purple in the shadows
-            of the peaks, green and brown where grass and rock mingled, and an endless perspective
+            A Tic Tac Toe game that allows users to interact with the screen to play this classic game written in JavaScript
           </p>
           <p>
             <a href="https://github.com/jwinchan/react-tic-tac-toe"><span class="iconify-inline"
