adding grammar to project descriptions, updating links to footer icons and resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,9 @@
           <span class="app-title">Pet Calendar App</span>
           <p class="app-text">
             The Capstone Project is the final project at Ada. Students must pursue a concept and develop their project
-            to demonstrate an end solution. My partner and I decided to develop a pet note-taking app written in Swift.
+            to demonstrate an end solution. 
+            <br><br>
+            My partner and I decided to develop a pet note-taking app written in Swift.
             The app tagline is <em>“pet-care made easy.”</em>
             <br><br>
             I developed the walkthrough onboarding page, Google auth login, app icon, home, and reminders functionality.
@@ -64,11 +66,11 @@
           <p class="app-text">
             This project builds a Rails app that manages the Rideshare program with the following requirements:
             <br><br>
-            <strong>Navigation functionality:</strong> As a user, I want a consistent, easily accessible navigation menu with different buttons/links from any page
+            <strong>Navigation functionality:</strong> As a user, I want a consistent, easily accessible navigation menu with different buttons/links from any page.
             <br><br>
-            <strong>Passenger functionality</strong> On the passenger list page, I want to click on a passenger to see that passenger's details
+            <strong>Passenger functionality</strong> On the passenger list page, I want to click on a passenger to see that passenger's details.
             <br><br>
-            <strong>Driver functionality:</strong> On the driver list page, I want to click on a driver so that I can see that driver's details
+            <strong>Driver functionality:</strong> On the driver list page, I want to click on a driver so that I can see that driver's details.
           </p>
           <p>
             <a href="https://github.com/spv-hub/ride-share-rails"><span class="iconify-inline"
@@ -85,9 +87,9 @@
         <article>
           <span class="app-title">Media Ranker Digest</span>
           <p class="app-text">
-            This is a Rails web app where users can vote for their favorite media works
+            This is a Rails web app where users can vote for their favorite media works.
             Instead of implementing a pre-defined spec, this projects aim is to imitate: http://media-ranker-2-0.herokuapp.com
-            <br><br> The goal for this project is to match the functionality and styling of the above site as closely as possible
+            <br><br> The goal for this project is to match the functionality and styling of the above site as closely as possible.
           </p>
           <p>
             <a href="https://github.com/spv-hub/media-ranker"><span class="iconify-inline" data-icon="openmoji:github"
@@ -108,7 +110,7 @@
             <br><br>
             The React front-end implementation will interact with a Rails API on the back-end. The Rails API wraps an external API that contains many endpoints related to videos. The external API is The Movie DB.
             <br><br>
-            The end product allows users to search for a video, select a video,  add a video to the video library,  and see a list of customers. The end product should be deployable to Heroku   
+            The end product allows users to search for a video, select a video,  add a video to the video library,  and see a list of customers. The end product should be deployable to Heroku.   
           </p>
           <p>
             <a href="https://bit.ly/3GvjK7p"><span class="iconify-inline" data-icon="openmoji:github" data-width="22"
@@ -144,12 +146,12 @@
 
           <p class="app-text-1">Upon execution, the CLI program outputs the following:</p>
           <ol class="list-text">
-            <li><span class="highlight-2"><strong>select user:</strong></span> The corresponding user
+            <li><span class="highlight-2"><strong>select user:</strong></span> The corresponding user.
             </li>
-            <li><span class="highlight-2"><strong>select channel:</strong></span> The corresponding channel
+            <li><span class="highlight-2"><strong>select channel:</strong></span> The corresponding channel.
             </li>
-            <li><span class="highlight-2"><strong>details:</strong></span> Print out details for the currently selected recipient
-            <li><span class="highlight-2"><strong>send message:</strong></span> If a recipient is selected, the program should ask me to type out a message, which will be sent to that recipient
+            <li><span class="highlight-2"><strong>details:</strong></span> Print out details for the currently selected recipient.
+            <li><span class="highlight-2"><strong>send message:</strong></span> If a recipient is selected, the program should ask me to type out a message, which will be sent to that recipient.
             </li>
             <p>
               <a href="https://github.com/spv-hub/slack-cli"><span class="iconify-inline" data-icon="openmoji:github"
@@ -166,7 +168,9 @@
         <article>
           <span class="app-title">Exquisite React App</span>
           <p class="app-text">
-            This project is a  single app that will allow users to contribute to a poem one line at a time using a form. Each line of poetry is a piece of data that propagates from component to component. A user filling out the form may only see the most recent line of poetry submitted. When the users are finished submitting lines of poetry, they should be able to see the entire poem
+            This project is a  single app that will allow users to contribute to a poem one line at a time using a form. Each line of poetry is a piece of data that propagates from component to component. 
+            <br><br>
+            A user filling out the form may only see the most recent line of poetry submitted. When the users are finished submitting lines of poetry, they should be able to see the entire poem.
           </p>
           <p>
             <a href="https://github.com/spv-hub/exquisite-react"><span class="iconify-inline"
@@ -210,7 +214,7 @@
         <article>
           <span class="app-title">Tic-Tac-Toe</span>
           <p class="app-text">
-            A Tic Tac Toe game that allows users to interact with the screen to play this classic game written in JavaScript
+            A Tic Tac Toe game that allows users to interact with the screen to play this classic game written in JavaScript.
           </p>
           <p>
             <a href="https://github.com/jwinchan/react-tic-tac-toe"><span class="iconify-inline"
@@ -224,12 +228,12 @@
   </div>
   <footer class="footer">
     <p class="p-footer">
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:linkedin-icon"
+      <a href="https://www.linkedin.com/in/vasquezsandy/"><span class="iconify-inline" data-icon="logos:linkedin-icon"
           id="iconify-inline-linkedin"></span></a>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:google-gmail"
+      <a href="https://twitter.com/_Ms_Luz_/"><span class="iconify-inline" data-icon="logos:twitter"
           id="iconify-inline-gmail"></span></a>
-      <a href="https://github.com/spv-hub/solar-system"><span class="iconify-inline" data-icon="logos:twitter"
-          id="iconify-inline-twitter"></span></a>
+      <a href="mailto:spv@mail.com?subject=The%20subject%20of%20the%20mail"><span class="iconify-inline"
+          data-icon="icon-park:mail" id="iconify-inline-twitter"></span></a>
     </p>
     © 2022 Sandy Vasquez - powered by Heroku
   </footer>
