--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=”en” prefix=”og: http://ogp.me/ns#">
 
 <head>
+  <!-- for linkedin feature image -->
+  <meta property='og:title' content='Title of the article'/>
+  <meta property='og:image' content='//media.example.com/ 1234567.jpg'/>
+  <meta property='og:description' content='Description that will show in the preview'/>
+  <meta property='og:url' content='//www.example.com/URL of the article'/>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sandy Vasquez: Portfolio</title>
