adding meta tags for LinkedIn feature image

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <!-- for linkedin feature image -->
-  <meta property='og:title' content='Title of the article'/>
-  <meta property='og:image' content='//media.example.com/ 1234567.jpg'/>
-  <meta property='og:description' content='Description that will show in the preview'/>
-  <meta property='og:url' content='//www.example.com/URL of the article'/>
+  <meta name="title" property="og:title" content="Portfolio">
+  <meta name="image" property="og:image" content="https://i.ibb.co/7jzBKtN/portfolio-background.jpg">
+  <meta name="description" property="og:description" content="A sample of my coding projects">
+  <meta property='og:url' content='https://sandyvasquez.dev/'/>
+  <meta name="author" content="Sandy Vasquez">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sandy Vasquez: Portfolio</title>
